<resources>
    <string name="app_name">mental</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wordTheme">Mental Health</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="f_name">First Name</string>
    <string name="api_key">3aab84zf52r2</string>

    <string name="username">Username</string>
    <string name="go">GO</string>
    <string name="chat_app">Chat App</string>
    <string name="reliable_and_fast">Reliable and Fast</string>
    <string name="first_name">First Name</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="channels">Channels</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="l_name">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="chat">Chat</string>
    <string name="age">Age</string>
    <string name="biography">Add Biography</string>
    <string name="certification">Add Certification</string>
    <string name="w_address">Add Work Address</string>
    <string name="go_to_sign_up">Do not have an account? <u>Sign up here</u></string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_title_p">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_patient">Patient</string>
    <string name="rev">Back</string>
    <string name="go_to_logIn">Go back to <u>Log In</u></string>
    <string name="img">CLICK HERE TO SELECT IMAGE FROM GALLERY</string>
    <string name="imgN">Enter Image Name Here</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_daktari">daktari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patientImg">Mental Patient</string>
    <string name="doctorImg">Mental Doctor</string>
    <string name="Treat">Treat Patient</string>
    <string name="consult">Consult Doctor</string>
    <string name="symptom">Tell us how you feel? One symptom. Click Add</string>
    <string name="height">Your Height</string>
    <string name="weight">Your Weight</string>
    <string name="record">Patient Records</string>
    <string name="analysis">Medical Analysis</string>
    <string name="medicine">Prescribe Medication</string>
    <string name="sickness">Patient Sickness</string>
    <string name="cases"><u>Handled Cases</u></string>
    <string name="mp"><u>Mental Patients</u></string>
    <string name="md"><u>Mental Health Doctors</u></string>
    <string name="n"><u>Patient Name</u></string>
    <string name="nd"><u>Doctor Name</u></string>
    <string name="a"><u>Patient Age</u></string>
    <string name="na"><u>Doctor Age</u></string>
    <string name="e"><u>Patient Email</u></string>
    <string name="ne"><u>Doctor Email</u></string>
    <string name="t"><u>Patient Telephone</u></string>
    <string name="nt"><u>Doctor Telephone</u></string>
    <string name="h"><u>Patient Home</u></string>
    <string name="nh"><u>Doctor Home</u></string>
    <string name="w"><u>Work Address</u></string>
    <string name="c"><u>Certificate</u></string>
    <string name="b"><u>Biography</u></string>
    <string name="d"><u>Date</u></string>
    <string name="s"><u>Symptoms</u></string>
    <string name="si"><u>Sickness</u></string>
    <string name="m"><u>Medicine</u></string>
    <string name="an"><u>Analysis</u></string>
    <string name="first">#Mental Health</string>
    <string name="second">#Depression</string>
    <string name="third">#Grief</string>
    <string name="fourth">#Anxiety</string>
    <string name="fifth">#Postpartum Depression</string>
</resources>