<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper"
        tools:context="com.example.mental.doctor.profileDoctor">


    <LinearLayout
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:background="@color/mentalBackground"
            android:orientation = "vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="horizontal">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="310dp"
            android:id="@+id/passport"
            android:contentDescription="@string/doctorImg" />

        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="310dp"
                android:orientation="vertical"
                android:backgroundTint="@color/white">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/n"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTxt" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/a"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ageTxt" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/e"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailTxt" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/t"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/telephoneTxt" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:backgroundTint="@color/white"
            android:id="@+id/linearLayout2"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width = "200dp"
                android:layout_height = "wrap_content"
                android:orientation = "vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/h"/>

            <TextView
                    android:id="@+id/homeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
                android:layout_width = "200dp"
                android:layout_height = "wrap_content"
                android:orientation = "vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/textBackground"
                    android:text="@string/w"/>

            <TextView
                    android:id="@+id/workTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/textBackground"
            android:text="@string/c"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/specialTxt" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/textBackground"
            android:text="@string/b"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/biographyTxt" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
