<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/wallpaper"
tools:context="com.example.mental.patients.consultDoctor">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mentalBackground"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/mentalTheme"
            android:textStyle="bold"
            android:text="Consultation"
            android:id = "@+id/Consultation"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patient_height"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/height"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patient_height_edit"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patient_weight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:layout_marginStart="10dp"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patient_weight_edit"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patient_symptom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/symptom"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patient_symptom_edit"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/add_symptom"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/mentalTheme"
                android:text="Add"
                tools:ignore="MissingConstraints" />

    </LinearLayout>

    <Button
            android:id="@+id/goConsult"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/mentalTheme"
            android:text="@string/consult"
            tools:ignore="MissingConstraints" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/symptom"/>

</LinearLayout>
</LinearLayout>